[gd_scene load_steps=8 format=3 uid="uid://d2e3f4g5h6i7j"]

[ext_resource type="Script" uid="uid://djfqwrcsbd4eu" path="res://projectiles/slowing_coconut.gd" id="1_slowing_coconut_gd"]
[ext_resource type="PackedScene" uid="uid://c7x80a00a1b2c" path="res://projectiles/slow_area.tscn" id="2_3w3nw"]
[ext_resource type="Texture2D" uid="uid://cokgf4s6s3xg6" path="res://assets/monsters/pelican/pelican_bullet.png" id="2_cbfb7"]
[ext_resource type="Script" uid="uid://xqvgljx4hk1s" path="res://scripts/hit_area_2d.gd" id="2_hit_area_gd"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_bounce"]
friction = 0.25
bounce = 0.8

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_3w3nw"]

[node name="SlowingCoconut" type="RigidBody2D"]
collision_layer = 32
mass = 0.5
physics_material_override = SubResource("PhysicsMaterial_bounce")
gravity_scale = 0.9
continuous_cd = 1
contact_monitor = true
max_contacts_reported = 3
linear_damp = 0.01
angular_damp = 0.35
script = ExtResource("1_slowing_coconut_gd")
slow_puddle_scene = ExtResource("2_3w3nw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_1")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1.92523e-07, 0.541334, 0.810479, 1)
texture = ExtResource("2_cbfb7")

[node name="HitArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
script = ExtResource("2_hit_area_gd")
metadata/_custom_type_script = "uid://xqvgljx4hk1s"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea2D"]
shape = SubResource("CircleShape2D_3w3nw")

[node name="LifetimeTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="timeout" from="LifetimeTimer" to="." method="_on_lifetime_timeout"]
